feat: Add google maps API keys

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,10 @@
     <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png" />
     <link rel="icon" type="image/png" href="./assets/img/gg-icon.png" />
     <title>GG: Good Government</title>
-    <!--     Fonts and icons     -->
+
     <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,600,700,800" rel="stylesheet" />
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet" />
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbIrfaMRD-VqRLLP-pgE4dXQBuTh75k0E"></script>
 
 </head>
 
